<resources>
    <string name="app_name">TindR Fire</string>
    <string name="tindfire">TindR Fire</string>
    <string name="already_liked_you">Already Liked You</string>
    <string name="copyright">Copyright 2016,All Rights Reserved</string>
    <string name="setting">Setting</string>
    <string name="distance">Distance</string>
    <string name="km">Km</string>
    <string name="miles">Miles</string>
    <string name="auto_liker">Auto Liker</string>
    <string name="set_youtr_location">Set Your Location</string>
    <string name="discovery_setting">Discovery Settings</string>
    <string name="number_of_profiles">Number of profile</string>
    <string name="terms_of_sercvice">Terms of Service</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="alreaady_liked_me">Already Liked Me</string>
    <string name="superlike">Superliked</string>
    <string name="history">History</string>
    <string name="match">Match</string>
    <string name="facebook_friends">Facebook Friends</string>
    <string name="message">Message</string>
    <string name="add_cooming_soon">Coming Soon</string>
    <string name="cooming_soon">Coming Soon</string>
    <!--<string name="facebook_app_id">747490872120685</string>-->
    <string name="facebook_app_id"><!--747490872120685-->464891386855067</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="liked">Liked</string>
    <string name="show_me_facebook_friends">Show Me Facebook Friends</string>
</resources>
