<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.8"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/auto_liker"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:src="@mipmap/next_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.8"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/set_youtr_location"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:src="@mipmap/next_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.8"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/auto_liker"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:src="@mipmap/next_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.8"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/number_of_profiles"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:src="@mipmap/next_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.8"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/terms_of_sercvice"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:src="@mipmap/next_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.8"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/help"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:src="@mipmap/next_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.8"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/logout"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:src="@mipmap/next_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_view"/>

</LinearLayout>